--- a/Project Root/www/hakkinda.html
+++ b/Project Root/www/hakkinda.html
@@ -12,13 +12,9 @@
 <script src="js/6.js"></script>
 <script src="js/7.js"></script>
 <script src="js/git_anasayfa.js"></script>
-
-  
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
   <link rel="stylesheet" type="text/css" href="css/otomatik_tm.css">
- 
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <head>
@@ -26,11 +22,19 @@
 </head>
 <body bgcolor="#045573">
 
-
-
-
-
-
+<div class="w3-top">
+<div style = "padding: 1px 18px; background-color:#034d68;">
+  <h2> <b> <center>Atasagun</center> </b> </h2> 
+</div>
+<div  style = "padding: 12px 18px; background-color:#034d68;">
+</div>
+<div style = "padding: 1px 0px; color: #ffffff; background-color: #003244;">
+</div>
+</div>    
+<div>
+<div  style = "padding: 22px 18px; background-color:#045573;">
+</div>
+<p></p>
 <div>
 <div>
  <div style="background-color: #045573; padding: 12px 12px;">
@@ -53,17 +57,11 @@
 <div class="row-padding" style="padding: 4px 0px;">
 </div>
 <textarea readonly  id="hakkindaveuyari" style="color: #424242; padding: 0px 5px; border: 0px solid; border-color: #636363; font-family: calibri; font-size: 14px; display: block; height: 280px; width: 100%; resize: none;" >
-Hakkında, Kullanım Koşulları, Nasıl Kullanılır... 
+Hakkında, Nasıl Kullanılır, Kullanım Koşulları... 
 </textarea>
-
-</div>
-		 		
+</div>	 		
 </div>
 </div>
-
-
-
-
 <div class="w3-bottom">
 <div class="w3-row-padding" style = "padding: 8px 12px; background-color: #045573;">
 <input type="button"
@@ -78,5 +76,3 @@ Hakkında, Kullanım Koşulları, Nasıl Kullanılır...
 </div>
 </body>
 </html>
-
-
